--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Team4Application</string>
+    <string name="edit_message">Enter a message</string>
+    <string name="button_vibrate">Vibrate</string>
+    <string name="button_menu">Menu</string>
 </resources>
