--- a/app/src/soundDetection/test.ipynb
+++ b/app/src/soundDetection/test.ipynb
@@ -21,6 +21,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "first work honda\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"first work honda\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -29,7 +46,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tensorflow2",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -43,7 +60,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.20"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
