--- a/app/src/soundDetection/test.ipynb
+++ b/app/src/soundDetection/test.ipynb
@@ -21,19 +21,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "first work honda\n"
+      "first work honda\n",
+      "second work honda\n"
      ]
     }
    ],
    "source": [
-    "print(\"first work honda\")"
+    "print(\"first work honda\")\n",
+    "print(\"second work honda\")"
    ]
   },
   {
