--- a/app/src/soundDetection/test.ipynb
+++ b/app/src/soundDetection/test.ipynb
@@ -24,12 +24,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#あああ"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tensorflow2",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -43,7 +45,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.20"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
