--- a/app/src/soundDetection/test.ipynb
+++ b/app/src/soundDetection/test.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -29,13 +29,15 @@
      "output_type": "stream",
      "text": [
       "first work honda\n",
-      "second work honda\n"
+      "second work honda\n",
+      "今日のテスト\n"
      ]
     }
    ],
    "source": [
     "print(\"first work honda\")\n",
-    "print(\"second work honda\")"
+    "print(\"second work honda\")\n",
+    "print(\"今日のテスト\")"
    ]
   },
   {
