--- a/app/src/soundDetection/test.ipynb
+++ b/app/src/soundDetection/test.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
    "source": [
     "print(\"first work honda\")\n",
     "print(\"second work honda\")\n",
-    "print(\"今日のテスト\")"
+    "print(\"today's test\")"
    ]
   },
   {
