--- a/app/src/soundDetection/test.ipynb
+++ b/app/src/soundDetection/test.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
      "text": [
       "first work honda\n",
       "second work honda\n",
-      "今日のテスト\n"
+      "today's test\n"
      ]
     }
    ],
