--- a/app/src/soundDetection/test.ipynb
+++ b/app/src/soundDetection/test.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -29,15 +29,13 @@
      "output_type": "stream",
      "text": [
       "first work honda\n",
-      "second work honda\n",
-      "1108test\n"
+      "second work honda\n"
      ]
     }
    ],
    "source": [
     "print(\"first work honda\")\n",
-    "print(\"second work honda\")\n",
-    "print(\"1108test\")"
+    "print(\"second work honda\")"
    ]
   },
   {
@@ -45,7 +43,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(\"Fujiwara_work\")"
+   ]
   }
  ],
  "metadata": {
@@ -64,7 +64,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.9.20"
   }
  },
  "nbformat": 4,
