--- a/app/src/soundDetection/test.ipynb
+++ b/app/src/soundDetection/test.ipynb
@@ -46,18 +46,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-
-
     "print(\"Fujiwara_work\")"
-
-    
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11/8\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"11/8\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-
-
    "language": "python",
    "name": "python3"
   },
@@ -71,7 +89,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.9.20"
   }
  },
  "nbformat": 4,
