--- a/app/src/soundDetection/test.ipynb
+++ b/app/src/soundDetection/test.ipynb
@@ -76,6 +76,7 @@
  ],
  "metadata": {
   "kernelspec": {
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -89,7 +90,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.20"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
